"""
Übung 4 - Morse-Code-Übersetzung

Diese Übung verwendet das Interpreter-Muster, um Morsecode in lesbaren Text zu übersetzen.
Es sollte Morsecode-Zeichen wie '.-' in entsprechende Buchstaben wie 'A' umwandeln.

Implementieren Sie die Klassen 'Interpreter', 'MorseToCharExpression' und 'TextExpression'.
"""


class Interpreter:
    pass


class MorseToCharExpression:
    pass


class TextExpression:
    pass


if __name__ == "__main__":
    interpreter = Interpreter()
    print(interpreter.interpret(".-"))  # Output: A